# pipecontrol

./: .gitignore  Dockerfile  Dockerfile.flask  Dockerfile.nginx  Dockerfile.old  README.md  app.conf  app.ini  config.py  cron_jobs  docker-compose.yml  docker-compose.yml.old  fabfile.py  index.html  instance.py  manage.py  pyproject.toml  requirements.txt  scheduled_tasks.py  start_shikigami.sh  startserver.sh
app/: __init__.py  config.py  decorators.py  email.py  errors.py  forms.py  models.py  schemata.py  tables.py  utils.py  views.py
app/auth/: forms.py  views.py
app/djrelation/: __init__.py  forms.py  relationtable.py  views.py
app/djtable/: __init__.py  decorators.py  form_factory.py  forms.py  relationtable.py  views.py
app/images/: __init__.py  _utils.py  views.py
app/main/: __init__.py  decorators.py  errors.py  forms.py  tables.py  utils.py  views.py
app/mouse/: __init__.py  forms.py  views.py
app/static/: datajoint.css  pdf.css  styles.css
app/stereotax/: __init__.py  forms.py  views.py
app/templates/: 403.html  404.html  500.html  _macros.html  add_module.html  autoprocessing.html  base.html  correction.html  edit_membership.html  edit_profile.html  figure.html  index.html  jobs.html  modules.html  mouse_report.html  pdf.html  progress.html  quality.html  report.html  scan_report.html  schema.html  segmentation.html  segmentationtask.html  summary.html  surgery.html  surgery_edit_status.html  surgery_status.html  user.html  (+1 more)
tmp/: 06efef03-a603-48e0-a78e-5a0972e789bd  1d47465a-74ed-43cf-97b1-f3a7313a5f15  cc94ca0f-8f2f-4505-8bd1-ffca5598441f
(+32 files in other folders)
